; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_patch_conexant.c_conexant_capture_pcm_prepare.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_patch_conexant.c_conexant_capture_pcm_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hda_pcm_stream = type { i32 }
%struct.hda_codec = type { %struct.conexant_spec* }
%struct.conexant_spec = type { i32*, i32 (%struct.hda_codec*)* }
%struct.snd_pcm_substream = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hda_pcm_stream*, %struct.hda_codec*, i32, i32, %struct.snd_pcm_substream*)* @conexant_capture_pcm_prepare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @conexant_capture_pcm_prepare(%struct.hda_pcm_stream* %0, %struct.hda_codec* %1, i32 %2, i32 %3, %struct.snd_pcm_substream* %4) #0 {
  %6 = alloca %struct.hda_pcm_stream*, align 8
  %7 = alloca %struct.hda_codec*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.snd_pcm_substream*, align 8
  %11 = alloca %struct.conexant_spec*, align 8
  store %struct.hda_pcm_stream* %0, %struct.hda_pcm_stream** %6, align 8
  store %struct.hda_codec* %1, %struct.hda_codec** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.snd_pcm_substream* %4, %struct.snd_pcm_substream** %10, align 8
  %12 = load %struct.hda_codec*, %struct.hda_codec** %7, align 8
  %13 = getelementptr inbounds %struct.hda_codec, %struct.hda_codec* %12, i32 0, i32 0
  %14 = load %struct.conexant_spec*, %struct.conexant_spec** %13, align 8
  store %struct.conexant_spec* %14, %struct.conexant_spec** %11, align 8
  %15 = load %struct.conexant_spec*, %struct.conexant_spec** %11, align 8
  %16 = getelementptr inbounds %struct.conexant_spec, %struct.conexant_spec* %15, i32 0, i32 1
  %17 = load i32 (%struct.hda_codec*)*, i32 (%struct.hda_codec*)** %16, align 8
  %18 = icmp ne i32 (%struct.hda_codec*)* %17, null
  br i1 %18, label %19, label %25

19:                                               ; preds = %5
  %20 = load %struct.conexant_spec*, %struct.conexant_spec** %11, align 8
  %21 = getelementptr inbounds %struct.conexant_spec, %struct.conexant_spec* %20, i32 0, i32 1
  %22 = load i32 (%struct.hda_codec*)*, i32 (%struct.hda_codec*)** %21, align 8
  %23 = load %struct.hda_codec*, %struct.hda_codec** %7, align 8
  %24 = call i32 %22(%struct.hda_codec* %23)
  br label %25

25:                                               ; preds = %19, %5
  %26 = load %struct.hda_codec*, %struct.hda_codec** %7, align 8
  %27 = load %struct.conexant_spec*, %struct.conexant_spec** %11, align 8
  %28 = getelementptr inbounds %struct.conexant_spec, %struct.conexant_spec* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %10, align 8
  %31 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = getelementptr inbounds i32, i32* %29, i64 %32
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* %8, align 4
  %36 = load i32, i32* %9, align 4
  %37 = call i32 @snd_hda_codec_setup_stream(%struct.hda_codec* %26, i32 %34, i32 %35, i32 0, i32 %36)
  ret i32 0
}

declare dso_local i32 @snd_hda_codec_setup_stream(%struct.hda_codec*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
